docs/pages/versions/v57.0.0/sdk/ui/jetpack-compose/iconbutton.mdx
---
title: IconButton
description: Jetpack Compose IconButton components for displaying native Material3 icon buttons.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

Expo UI provides four icon button components that match the official Jetpack Compose [IconButton API](https://developer.android.com/develop/ui/compose/components/icon-button): `IconButton`, `FilledIconButton`, `FilledTonalIconButton`, and `OutlinedIconButton`. All variants share the same props and accept composable children for content.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/iconbutton/android-light.webp"
  darkSrc="/static/images/expo-ui/iconbutton/android-dark.webp"
  alt="Filled, filled tonal, and standard Material 3 icon buttons"
/>

## Installation

<APIInstallSection />

## Usage

### Basic icon button

A standard icon button with no background, typically used for toolbar actions.

<ComponentExample
  title="BasicIconButtonExample.tsx"
  src="/static/images/expo-ui/examples/iconbutton-basic-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/iconbutton-basic-android-dark.webp"
  alt="A gear icon button with no background">

```tsx
import {
  Host,
  IconButton,
  Icon,
  Surface,
} from '@expo/ui/jetpack-compose';

export default function BasicIconButtonExample() {
  return (
    <Host matchContents>
      <Surface>
        <IconButton onClick={() => alert('Pressed!')}>
          <Icon
            source={require('./assets/settings.xml')}
            size={24}
          />
        </IconButton>
      </Surface>
    </Host>
  );
}
```

</ComponentExample>

### Icon button variants

Use different icon button components to convey varying levels of emphasis.

<ComponentExample
  title="IconButtonVariantsExample.tsx"
  src="/static/images/expo-ui/examples/iconbutton-variants-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/iconbutton-variants-android-dark.webp"
  alt="Four star icon buttons in a row: plain, filled, filled tonal, and outlined">

```tsx
import {
  Host,
  IconButton,
  FilledIconButton,
  FilledTonalIconButton,
  OutlinedIconButton,
  Icon,
  Row,
  Surface,
} from '@expo/ui/jetpack-compose';

export default function IconButtonVariantsExample() {
  return (
    <Host matchContents>
      <Surface>
        <Row horizontalArrangement={{ spacedBy: 8 }}>
          <IconButton onClick={() => {}}>
            <Icon source={require('./assets/star.xml')} size={24} />
          </IconButton>
          <FilledIconButton onClick={() => {}}>
            <Icon source={require('./assets/star.xml')} size={24} />
          </FilledIconButton>
          <FilledTonalIconButton onClick={() => {}}>
            <Icon source={require('./assets/star.xml')} size={24} />
          </FilledTonalIconButton>
          <OutlinedIconButton onClick={() => {}}>
            <Icon source={require('./assets/star.xml')} size={24} />
          </OutlinedIconButton>
        </Row>
      </Surface>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import {
  IconButton,
  FilledIconButton,
  FilledTonalIconButton,
  OutlinedIconButton,
} from '@expo/ui/jetpack-compose';
```

<APISection
  packageName="expo-ui/jetpack-compose/iconbutton"
  apiName="IconButton"
/>
